--- a/sport-war/src/main/webapp/static/track/trackstyle.css
+++ b/sport-war/src/main/webapp/static/track/trackstyle.css
@@ -1,4 +1,4 @@
-html, body, #center {
+html, body, #body, #center {
     min-height: 100%;
     height: 100%;
     overflow: hidden;
